--- a/jspwork/JspProject/src/main/webapp/day0801/oneForm.html
+++ b/jspwork/JspProject/src/main/webapp/day0801/oneForm.html
@@ -8,18 +8,18 @@
 <title>Insert title here</title>
 </head>
 <body>
-<div style="margin-left: 200px;">
+<div style="margin-left: 500px; margin-right: 500px;" >
 	<form action="oneAction.jsp" method="post">
-		<table class="table table-bordered style="width: 500px;">
+		<table class="table table-bordered style="width: 300px;">
 		<tr>
-			<th class="table table-info">이름</th>
+			<th class="table table-info" style="width:100px">이름</th>
 			<td>										<!--value값을 가져오는것 무조건 name으로 가져옴-->
 				<input type="text" class="form-control" name="irum"
 				style="width: 150px;">
 			</td>
 		</tr>
 				<tr>
-			<th class="table-warning">생년월일</th>
+			<th class="table-warning" style="width:100px">생년월일</th>
 			<td>										<!--value값을 가져오는것 무조건 name으로 가져옴-->
 				<input type="date" class="form-control" name="birth"
 				style="width: 250px;">
