--- a/jspwork/AjaxProject/src/main/webapp/memo/memo.html
+++ b/jspwork/AjaxProject/src/main/webapp/memo/memo.html
@@ -197,7 +197,7 @@
 			})
 		});
 		
-		$("td.dbupdate")click(function(){
+		$("td.dbupdate").click(function(){
 			var data=$("#updatefrm").serialize();
 			//alert(data);
 			$.ajax({
